<?php
namespace DesignPatterns\Behavioral\Strategy;

class AliStrategy extends AbstractStrategy
{
    public function pullSecret()
    {

    }

    public function pushSecret()
    {

    }
}