<?php
namespace DesignPatterns\Behavioral\Strategy;

class TencentStrategy extends AbstractStrategy
{
    public function pullSecret()
    {

    }

    public function pushSecret()
    {

    }
}